# NewOpenSpaceInvaders

./: CMakeLists.txt  README.md  settings.lua
src/: event.c  event.h  load.c  load.h  log.c  log.h  main.c  memory.c  memory.h  opengl.c  opengl.h  script.c  script.h  settings.c  settings.h  system.c  system.h  texture.c  texture.h  timer.c  timer.h  window.c  window.h
